Save 2 - Diário Emocional

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!--Style-->
+    <h1>📘Diário Emocional</h1>
+    <form>
+        <label for="usuario">Seu nome:</label>
+        <input type="text" id="usuario" placeholder="Digite seu nome ou apelido" required>
+        <label for="data">Data e hora:</label>
+        <input type="text">
+    </form>
     <!--JavaScript-->
     <script src="main.js"></script>
 </body>
