Save 4 - Diário Emocional

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="listaEntradas"></div>
     </div>
     <div style="text-align:center;margin-top: 20px;">
-        <button onclick="mostrarFase()">Quero uma frase motivacional!🗣️</button>
+        <button onclick="mostrarFrase()">Quero uma frase motivacional!🗣️</button>
         <p id="fraseMotivacional" style="margin-top: 15px;font-style: italic;font-size: 1.1em;"></p>
     </div>
     <!--JavaScript-->
